--- a/task5/style/_layout.scss
+++ b/task5/style/_layout.scss
@@ -17,14 +17,9 @@
   font-size: 15px;
 }
 
-.article__row {
-  display: flex;
-  flex-direction: row;
-  gap: 1rem;
-}
-
 .article__body {
   flex: 1;
+  flex-grow: 1;
   order: 1;
 }
 
@@ -40,10 +35,19 @@
 .content__row {
   font-size: 0;
   white-space: normal;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .article--part-2 {
   flex: 1 1 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: space-between;
+  padding: 1rem;
+  box-sizing: border-box;
 }
 
 .card-content {
@@ -90,7 +94,7 @@
 }
 
 .article--text{
-   h2 {
+  h2 {
     flex: 1;
     order: 1;
   }
@@ -207,14 +211,16 @@
     height: 100%;
   }
 
+  .content__row {
+    flex-direction: row;
+  }
+
   .article--part-2 {
-    height: 350px;
-    width:  calc(45% - 20px);
+    min-width: 45%;
   }
 
   .article--part-3 {
-    height: 450px;
-    width: calc(30% - 20px);
+    min-width: 30%;
   }
 
   .article--left {
