--- a/task5/style/index.css
+++ b/task5/style/index.css
@@ -441,14 +441,9 @@ footer {
   margin: 0;
 }
 
-.article__row {
-  display: flex;
-  flex-direction: row;
-  gap: 1rem;
-}
-
 .article__body {
   flex: 1;
+  flex-grow: 1;
   order: 1;
 }
 
@@ -464,10 +459,19 @@ footer {
 .content__row {
   font-size: 0;
   white-space: normal;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .article--part-2 {
   flex: 1 1 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: space-between;
+  padding: 1rem;
+  box-sizing: border-box;
 }
 
 .card-content {
@@ -606,13 +610,14 @@ footer {
     flex: 1;
     height: 100%;
   }
+  .content__row {
+    flex-direction: row;
+  }
   .article--part-2 {
-    height: 350px;
-    width: calc(45% - 20px);
+    min-width: 45%;
   }
   .article--part-3 {
-    height: 450px;
-    width: calc(30% - 20px);
+    min-width: 30%;
   }
   .article--left .article__body {
     order: 1;
